<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.crazynet.taxidegeluser.UI.splash2.splash2Activity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="304.44dp"
        android:layout_height="125.32dp"
        android:text="@string/welcomeSplash"
        android:fontFamily="@font/gibsonsemibold"
        android:textStyle="bold"
        android:textSize="52sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".3"
        />

    <TextView
        android:id="@+id/under_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underSplash"
        android:textColor="@color/white"
        android:fontFamily="@font/gibsonregular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:fontFamily="@font/gibsonsemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/under_welcome"
        app:layout_constraintBottom_toTopOf="@id/signup"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/gibsonsemibold"
        android:background="@drawable/gray_dark_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:fontFamily="@font/gibsonsemibold"
        android:textColor="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/goldbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login"
        />
</android.support.constraint.ConstraintLayout>
