<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.crazynet.taxidegeluser.UI.welcomeRegister.welcomeActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:scaleType="centerCrop"
        android:src="@mipmap/welcome"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:layout_gravity="center"
        android:fontFamily="@font/gibsonsemibold"
        android:textSize="40dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/welcome"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:text="@string/thankyou"
        android:textColor="@color/thank"
        android:textSize="14dp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/btn_to_main"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/goldbutton"
        android:text="@string/next"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"/>
</LinearLayout>
